# interop2020-batfish

./: README.md  pyproject.toml
demo/: impact_analysis.py  load_snapshot.py  prettify.py
snapshots/3tier-multivendor/: layer1_topology.json
snapshots/3tier-multivendor/configs/: ios-access2.cfg  nxos-aggr1.cfg  nxos-aggr2.cfg  qfx-access1.cfg
snapshots/3tier-multivendor/hosts/: server1.json  server2.json  server3.json
