[tool.poetry]
name = "interop-batfish-demo"
version = "0.1.0"
description = ""
authors = ["Rick Donato <rick.donato@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybatfish = "^2020.8.11"
rich = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
